8368032: Enhance Certificate Checking
Reviewed-by: andrew
Backport-of: d7057c7c34af60d0ee0b3df01bc6871e17572317